--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <img src="images/foto-de-perfil-github.png" alt="Pedro Lucas">
 
             <p>
-                Olá, me chamo Pedro Lucas! Atualmente estudo para ser desenvolvedor web, moro no Rio de Janeiro com meus pais. Desde pequeno, sempre gostei de tecnologia, videogame, computadores, celulares e etc. Quando descobri a área da programação, eu soube que queria entrar nela.
+                Olá, me chamo Pedro Lucas! Atualmente estudo para ser desenvolvedor web, moro no Rio de Janeiro com meus pais. Desde pequeno, sempre gostei de tecnologia. Quando descobri a área da programação, eu soube que queria entrar nela.
             </p>
 
         </section>
